--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -10,6 +10,12 @@
     background-color: #fff;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.04);
 }
+.active-nav{
+    color: #0b1af8 !important;
+}
+.no-under {
+    text-decoration: none !important;
+}
 @import '../css/venobox/venobox.css';
 @import '../css/bootstrap.min.css';
 @import '../css/css-animation.min.css';
