--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -27,3 +27,4 @@
 @import '../css/responsive.css';
 @import '../css/slicknav.min.css';
 @import '../css/themify-icons.css';
+@import '~vuetify/dist/vuetify.min.css';
