--- a/public/css/app.css
+++ b/public/css/app.css
@@ -18684,3 +18684,28 @@ a.text-dark:focus {
   text-decoration: none !important;
 }
 
+/* width */
+
+::-webkit-scrollbar {
+  width: 5px !important;
+}
+
+/* Track */
+
+::-webkit-scrollbar-track {
+  background: #ffffff !important;
+}
+
+/* Handle */
+
+::-webkit-scrollbar-thumb {
+  background: #c4c3c3 !important;
+  border-radius: 10rem !important;
+}
+
+/* Handle on hover */
+
+::-webkit-scrollbar-thumb:hover {
+  background: #888 !important;
+}
+
