--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -28,3 +28,24 @@
 @import '../css/slicknav.min.css';
 @import '../css/themify-icons.css';
 @import '~vuetify/dist/vuetify.min.css';
+
+/* width */
+::-webkit-scrollbar {
+    width: 5px !important;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+    background: #ffffff !important;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+    background: #c4c3c3 !important;
+    border-radius: 10rem !important;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+    background: #888 !important;
+}
